--- a/deepvoice3_0421749/demo_page/demo_tree.html
+++ b/deepvoice3_0421749/demo_page/demo_tree.html
@@ -202,7 +202,16 @@
               function(node) { return node.data.wavs; },
               function(node) { 
                 if (node.data.wavs != null){
-                  return "play voice conversion wav";
+                  return "voice conversion";
+                }
+                return "";
+              },
+              { margin: 1, maxSize: new go.Size(180, 80), textAlign: "center" }),
+              $("HyperlinkText",
+              function(node) { return node.data.long; },
+              function(node) { 
+                if (node.data.long != null){
+                  return "long voice conversion ";
                 }
                 return "";
               },
@@ -222,14 +231,17 @@
       // set up the nodeDataArray, describing each person/position
       var ljspeech_wavenet = './0514/20210412_cei_ljspeech_checkpoint_step001630000_88d46e18762f4925aa2ee9e505c5d237.wav';
       var ljspeechp225_wavenet = './0514/20210426_cei_ljspeech_vctk_p225_checkpoint_step000020000_ff89a9a4965c4a308b97a5b255515da0.wav';
+      var ljspeechp225_wavenet_long = './0514/20210426_cei_ljspeech_vctk_p225_checkpoint_step000020000_da4fd7e55cb747cdb2f68e23d248c356.wav'
       var ljspeechp226_wavenet = './0514/20210426_cei_ljspeech_vctk_p226_checkpoint_step000040000_cc4fffc84a444485b9c2cb5e56dc1994.wav';
+      var ljspeechp226_wavenet_long = './0514/0210426_cei_ljspeech_vctk_p226_checkpoint_step000040000_3c1c647b63ac45d8bdf9491785d9e703.wav'
       var ljspeechp227_wavenet = './0514/20210426_cei_ljspeech_vctk_p227_checkpoint_step000040000_b1cc9119bbfe4047bd54e46822bcd1f4.wav'; 
+      var ljspeechp227_wavenet_long = './0514/20210426_cei_ljspeech_vctk_p227_checkpoint_step000040000_d6d833ccad2646a49a5056f05f42badf.wav';
       var nodeDataArray = [
         { key: 0, name: "LJSpeech", nation: "UnitedStates", title: "20 hours\n13,101 wavs\n1 female speaker\ntraining TTS model: 1~3 day", wavo1:"./LJ050-0001.wav" },
         { key: 1, boss: 0, name: "VCTK 108-spekakers VoiceConversion\n(Speaker Adaptation)",  title: "33 Englisth Speakers\ntraining vc model: 15~20min" },
-        { key: 3, boss: 1, name: "P225", nation: "UnitedStates", title: "Age: 23\nGender: Female\ndatasize: 13min\nUtterance: 231 ",wavo1:'./p225_001.wav',wavo2:'./p225_002.wav',wavs:ljspeechp225_wavenet },
+        { key: 3, boss: 1, name: "P225", nation: "UnitedStates", title: "Age: 23\nGender: Female\ndatasize: 13min\nUtterance: 231 ",wavo1:'./p225_001.wav',wavo2:'./p225_002.wav',wavs:ljspeechp225_wavenet,long:ljspeechp225_wavenet_long },
         { key: 4, boss: 1, name: "P226", nation: "UnitedStates", title: "Age: 22\nGender: Male\ndatasize: 22minn\nUtterance: 356",wavo1:'./p226_001.wav',wavo2:'./p226_002.wav',wavs:ljspeechp226_wavenet },
-        { key: 5, boss: 1, name: "P227", nation: "UnitedStates", title: "Age: 38\nGender: Male\ndatasize: 21minn\nUtterance: 389", wavo1:'./p227_001.wav',wavo2:'./p227_002.wav',wavs:ljspeechp227_wavenet },
+        { key: 5, boss: 1, name: "P227", nation: "UnitedStates", title: "Age: 38\nGender: Male\ndatasize: 21minn\nUtterance: 389", wavo1:'./p227_001.wav',wavo2:'./p227_002.wav',wavs:ljspeechp227_wavenet},
         //{ key: 5, boss: 1, name: "P227", nation: "UnitedStates", title: "Age: 38\nGender: Male\ndatasize: 21minn\nUtterance: 389", headOf: "Codification Division",wavo:'./wavenet.wav',wavs:'./wavenet.wav' },
         { key: 2, boss: 0, name: "w/o Voice Conversiion",wavs:ljspeech_wavenet }
       ];
